// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routing app routes match snapshot 1`] = `
Object {
  "component": [Function],
  "exact": true,
  "name": "Root Path",
  "path": "/",
}
`;

exports[`routing app routes match snapshot 2`] = `
Object {
  "component": [Function],
  "exact": true,
  "name": "Content Pages",
  "path": "/:pageId",
}
`;

exports[`routing app routes match snapshot 3`] = `
Object {
  "component": [Function],
  "name": "Not Found",
}
`;
